--- a/src/style.css
+++ b/src/style.css
@@ -44,14 +44,26 @@ section {
 .hero--text {
     margin-top: 0;
 }
+.cards-list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+}
 .card {
+    flex: 0 0 auto;
     display: flex;
     flex-direction: column;
     width: 176px;
+    position: relative;
 }
 .card--image {
     width: 100%;
     border-radius: 10px
+}
+.card--title {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .card--star {
     width: 14px;
@@ -59,4 +71,13 @@ section {
 .card--text {
     font-size: 12px;
     margin: 8px 0;
+}
+.card--badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
 }
